# vk-shader-macros

./: Cargo.toml  README.md
impl/: Cargo.toml
impl/src/: build.rs  lib.rs  parse.rs
shared/: build.rs
src/: build.rs  hot_reloading.rs  lib.rs  reflection.rs
tests/: include.rs  inline.rs  reflection.frag  reflection.rs
