[package]
name = "vk-shader-macros"
description = "Procedural macros for working with Vulkan shaders"
repository = "https://github.com/Ralith/vk-shader-macros"
version = "0.2.8"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["vulkan", "spirv"]
categories = ["rendering"]

[badges]
maintenance = { status = "actively-developed" }

[features]
strip = ["vk-shader-macros-impl/strip"] # Omit debug info from generated SPIR-V by default
default-optimize-zero = ["vk-shader-macros-impl/default-optimize-zero"] # Set default optimization level to zero for debugging
build-from-source = ["vk-shader-macros-impl/build-from-source"] # Force shaderc to be built from source
hot-reloading = ["shaderc"] # TODO doesn't actually work yet
default = ["hot-reloading"]

[dependencies]
vk-shader-macros-impl = { version = "=0.2.8", path = "impl" }

shaderc = { version = "0.8.2", optional = true }
anyhow = "1.0.83"
notify = "6.1.1"
