[package]
name = "vk-shader-macros"
description = "Procedural macros for working with Vulkan shaders"
repository = "https://github.com/Ralith/vk-shader-macros"
version = "0.2.8"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
rust-version = "1.88.0"
readme = "README.md"
keywords = ["vulkan", "spirv"]
categories = ["rendering"]

[badges]
maintenance = { status = "actively-developed" }

[features]
strip = ["vk-shader-macros-impl/strip"] # Omit debug info from generated SPIR-V by default
default-optimize-zero = ["vk-shader-macros-impl/default-optimize-zero"] # Set default optimization level to zero for debugging
build-from-source = ["vk-shader-macros-impl/build-from-source"] # Force shaderc to be built from source
hot-reloading = ["shaderc", "notify", "vk-shader-macros-impl/hot-reloading"]
reflection = ["spirq", "bytemuck", "vk-shader-macros-impl/reflection"]

# If multiple default-version features are enabled, the highest version will be used
default-version-vulkan1_1 = ["vk-shader-macros-impl/default-version-vulkan1_1"] # Set default target version to Vulkan 1.1 (SPIR-V 1.3)
default-version-vulkan1_2 = ["vk-shader-macros-impl/default-version-vulkan1_2"] # Set default target version to Vulkan 1.2 (SPIR-V 1.5)
default-version-vulkan1_3 = ["vk-shader-macros-impl/default-version-vulkan1_3"] # Set default target version to Vulkan 1.3 (SPIR-V 1.6)
default-version-vulkan1_4 = ["vk-shader-macros-impl/default-version-vulkan1_4"] # Set default target version to Vulkan 1.3 (SPIR-V 1.6)

[dependencies]
vk-shader-macros-impl = { version = "=0.2.8", path = "impl" }

shaderc = { version = "0.9.1", optional = true }
notify = { version = ">=6.1.1, <9.0.0", optional = true }

spirq = { version = "1.2.2", optional = true }
bytemuck = { version = "1.23.1", optional = true }
