[package]
name = "vk-shader-macros-impl"
description = "Implementation detail of vk-shader-macros"
repository = "https://github.com/Ralith/vk-shader-macros"
version = "0.2.8"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["vulkan", "spirv"]
categories = ["rendering"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]
strip = [] # Omit debug info from generated SPIR-V by default
default-optimize-zero = [] # Set default optimization level to zero for debugging
build-from-source = ["shaderc/build-from-source"] # Force shaderc to be built from source
hot-reloading = []

# If multiple default-version features are enabled, the highest version will be used
default-version-vulkan1_1 = [] # Set default target version to Vulkan 1.1 (SPIR-V 1.3)
default-version-vulkan1_2 = [] # Set default target version to Vulkan 1.2 (SPIR-V 1.5)
default-version-vulkan1_3 = [] # Set default target version to Vulkan 1.3 (SPIR-V 1.6)

[dependencies]
syn = { version = "2.0.0", default-features = false, features = ["parsing", "proc-macro", "derive", "printing"] }
quote = "1.0.17"
proc-macro2 = "1.0.36"
shaderc = "0.8.3"
